Integration changes for option 2&3 final